[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hinge-st"
version = "0.1.0"
description = "PyTorch implementation of HINGE for spatial transcriptomics reconstruction."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "HINGE contributors" }
]
dependencies = [
  "anndata>=0.10",
  "numpy>=1.23",
  "pandas>=1.5",
  "pillow>=9.0",
  "torch>=2.0",
  "torchvision>=0.15",
  "tqdm>=4.64"
]

[project.optional-dependencies]
data = ["huggingface-hub>=0.23"]
mindspore = ["mindspore>=2.0"]

[project.scripts]
hinge-check-data = "Hinge.check_data:main"
hinge-train = "Hinge.train:main"

[tool.setuptools]
packages = ["Hinge"]
package-dir = { "Hinge" = "." }
